crates/tsuno-driver/tests/fixtures/snapshots/pass/reads_shared_reborrow_from_mut_ref.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS reads_shared_reborrow_from_mut_ref
  all assertions discharged

stderr:
