crates/tsuno-driver/tests/fixtures/snapshots/pass/reads_shared_reference_argument.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS reads_shared_reference_argument
  all assertions discharged
PASS main
  all assertions discharged

stderr:
