crates/tsuno-driver/tests/fixtures/snapshots/pass/reborrow_after_opaque_move_call.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS reborrow_after_opaque_move_call
  all assertions discharged

stderr:
