crates/tsuno-driver/tests/fixtures/snapshots/pass/reference_pointer_model_fields.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS reference_pointer_model_fields
  all assertions discharged
PASS generic_pointer_model_field
  all assertions discharged
PASS main
  all assertions discharged

stderr:
