crates/tsuno-driver/tests/fixtures/snapshots/pass/rejects_open_mutable_reference_after_abstract_call.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS opaque
  all assertions discharged
PASS bad_close
  all assertions discharged
PASS main
  all assertions discharged

stderr:
