crates/tsuno-driver/tests/fixtures/snapshots/pass/rejects_open_mutable_reference_on_storage_dead.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS bad_scope
  all assertions discharged

stderr:
