crates/tsuno-driver/tests/fixtures/snapshots/pass/reports_failing_assertion.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS bad
  all assertions discharged

stderr:
