crates/tsuno-driver/tests/fixtures/snapshots/pass/req_binder_is_visible_in_body.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(0)
stdout:
PASS req_binder_is_visible_in_body
  all assertions discharged
PASS main
  all assertions discharged

stderr:
