crates/tsuno-driver/tests/fixtures/snapshots/pass/solver_returns_unknown.snap
---
source: crates/tsuno-driver/tests/verify_cli.rs
expression: snapshot_output(output)
---
status: Some(0)
stdout:
UNKNOWN solver_returns_unknown
  all assertions discharged

stderr:
